# sam3-edge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.sh  install_jetson.sh  pyproject.toml
patches/: README.md  model_builder.patch  trt_export.patch
patches/sam3/model/: trt_export.py
sam3_deepstream/: Dockerfile  Dockerfile.jetson  README.md  constraints.txt  docker-compose.jetson.yml  docker-compose.yml  pyproject.toml  requirements-api.txt
sam3_deepstream/config/: sam3_infer_config.txt  tracker_NvDCF.yml
sam3_deepstream/engines/: sam3_decoder.engine  sam3_decoder.onnx  sam3_encoder.engine  sam3_vit.onnx
sam3_deepstream/examples/: api_client.py
sam3_deepstream/sam3_deepstream/: __init__.py  config.py
sam3_deepstream/sam3_deepstream/api/: __init__.py  main.py  server.py
sam3_deepstream/sam3_deepstream/api/models/: __init__.py  requests.py  responses.py
sam3_deepstream/sam3_deepstream/api/routes/: health.py  nlq.py  stream.py  video.py
sam3_deepstream/sam3_deepstream/api/services/: __init__.py  detection_store.py  embedding_service.py  job_manager.py  video_processor.py
sam3_deepstream/sam3_deepstream/export/: __init__.py  decoder_export.py  encoder_export.py  engine_manager.py  pe_encoder_export.py
sam3_deepstream/sam3_deepstream/inference/: __init__.py  async_trt_runtime.py  keyframe_processor.py  mask_propagation.py  trt_runtime.py  trt_trunk.py
sam3_deepstream/sam3_deepstream/pipeline/: __init__.py  deepstream_config.py  gst_pipeline.py  tracker_config.py
sam3_deepstream/sam3_deepstream/utils/: __init__.py  mask_utils.py  video_io.py
sam3_deepstream/scripts/: __init__.py  export_decoder_minimal.py  export_engines.py  export_minimal.py  run_api_tests.py  run_e2e_test.py  run_server.py  start_api.sh  test_deepstream.py  test_sam3_pipeline.py  test_trt_engine.py
sam3_deepstream/tests/: __init__.py  conftest.py  test_api.py  test_export.py  test_keyframe_integration.py
scripts/: run_tests.sh
