[project]
name = "sam3-edge"
version = "0.1.0"
description = "SAM3 Edge Computing System for Jetson AGX Orin"
requires-python = ">=3.10,<3.12"
dependencies = []

[tool.uv.workspace]
members = ["sam3_deepstream"]

[tool.uv.sources]
# sam3 from local directory (includes trt_export.py for TensorRT support)
sam3 = { path = "./sam3", editable = true }
sam3-deepstream = { workspace = true }
