[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-deepstream"
version = "0.1.0"
description = "SAM3 + DeepStream + FastAPI for real-time video segmentation on Jetson"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
authors = [
    {name = "SAM3 DeepStream Team"}
]

dependencies = [
    "sam3",  # SAM3 model - installed from workspace
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "numpy>=1.24.0,<2",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0",
    "iopath>=0.1.10",
    "hydra-core>=1.3.0",
    "einops>=0.7.0",
    "timm>=1.0.17",
    "tqdm",
    "ftfy>=6.1.1",
    "regex",
    "typing_extensions",
    "triton>=2.0.0",
    "decord2",  # ARM64/aarch64 compatible fork of decord
    "pycocotools>=2.0.0",
    "psutil>=5.9.0",  # Note: On Jetson, may need system package instead
    "faiss-cpu>=1.7.2",  # Vector search (ARM64 compatible - no faiss-gpu wheels for aarch64)
    "aiosqlite>=0.19.0",  # Async SQLite for detection storage
    "onnx>=1.14.0",  # ONNX export for TensorRT
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",  # For standalone API tests
]
jetson = [
    "pycuda>=2022.1",
]

[project.scripts]
sam3-api = "sam3_deepstream.api.server:main"
sam3-deepstream = "sam3_deepstream.api.server:main"

[tool.setuptools]
packages = ["sam3_deepstream", "sam3_deepstream.api", "sam3_deepstream.api.models", "sam3_deepstream.api.routes", "sam3_deepstream.api.services", "sam3_deepstream.export", "sam3_deepstream.inference", "sam3_deepstream.pipeline", "sam3_deepstream.utils"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yml", "*.yaml"]

# Development dependency group (uv compatible)
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",  # For standalone API tests
]

[tool.uv.sources]
# SAM3 from local directory (includes trt_export.py for TensorRT support)
sam3 = { path = "../sam3", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: test requires GPU/CUDA",
    "slow: slow running test",
]
